[BUGFIX] Long names in topic awards get cut off
Fixes #22

--- a/Resources/Public/como.less
+++ b/Resources/Public/como.less
@@ -11,7 +11,7 @@ body {
 	margin: 0;
 
 	.container {
-		width: 960px;
+		width: 1200px;
 		margin: 0 auto;
 		position: relative;
 		height: 790px;
@@ -47,7 +47,7 @@ body {
 	.current {
 		position: absolute;
 		top: 100px;
-		right: 80px;
+		right: 200px;
 		width: 300px;
 		text-align: center;
 
